Fix T87526: poor contrast in attribute search

Differential Revision: https://developer.blender.org/D11106